fixed broken css paths

--- a/wishlist/wishlist.css
+++ b/wishlist/wishlist.css
@@ -65,6 +65,16 @@
     padding: 0.5rem;
 }
 
+.page-title{
+    text-align: center;
+    font-size: var(--fs1);
+    margin-bottom: 1rem;
+}
+.page-title{
+    text-align: center;
+    font-size: var(--fs1);
+    margin-bottom: 1rem;
+}
 /* main content */
 .main-content{
     /* border: 1px solid black; */
